--- a/web/upload_app/templates/upload.html
+++ b/web/upload_app/templates/upload.html
@@ -1,48 +1,42 @@
 {% extends 'layout.html' %} 
 {% block content %}
 {% load staticfiles %}
-<div class="box__logo">
-    <div>
-        <span><img src="{% static 'logo.png' %}" class="img__logo" align="absmiddle"> 악성코드 검사</span>
+<div class="row">
+    <div class="box__logo">
+        <img src="{% static 'logo.png' %}" class="img__logo" align="absmiddle"> <span>악성코드 검사</span>
     </div>
 </div>
 
-<div class="container" role="main">
+<div class="row">
+<div class="container_form" role="main">
     <form method="POST" action="/upload/" enctype="multipart/form-data" novalidate class="box">
         {% csrf_token %}
         <div class="box__input">
             <div>
-                <img src="{% static 'download.png' %}" class="box__icon">
+                <img src="{% static 'download.png' %}" class="box__icon" id="upload">
             </div>
             <input type="file" name="upload_file" id="file" class="box__file" style="display: none;" data-multiple-caption="{count} files selected" multiple>
             <label for="file"><strong><i>Choose a file</i></strong><span class="box__dragndrop"> or drag it here</span>.</label>
-            <!--
-        <p>
-            <button type="submit">submit</button>
-        </p>
--->
 
         </div>
         
-        <div class="box__uploading">Uploading&hellip;</div>
+        <div class="box__uploading">
+            <div><img src="{% static 'download.gif' %}" class="box__icon" id="uploading">
+            </div>
+            Uploading&hellip;
+        </div>
 
     </form>
+</div>
+</div>
+
+<div class="row">
 </div>
 
 
     <script src = "{% static  '/js/upload_script.js' %}">    </script>
 
+
 {% endblock %}
-{% block sidebar %}
-{% load staticfiles %}
 
-
-<ul class="nav-list">
-    <li class="nav-item"><a href='/upload' class="nav-link">Menu-1</a></li>
-    <li class="nav-item"><a href='/detail' class="nav-link">Menu-2</a></li>
-</ul>
-
-
-<link rel="stylesheet" type="text/css" href="{% static '/css/nav_cont.css' %}" /> 
-{% endblock %}
 
