--- a/web/upload_app/templates/upload.html
+++ b/web/upload_app/templates/upload.html
@@ -6,48 +6,43 @@
 </div>
 
 <div class="row">
-    <form method="POST" action="/upload/" enctype="multipart/form-data">
-        {% csrf_token %}
-        <div class="row-upload">
-            <div class="btn-form">
+    <div class="row_upload">
+        <form method="post" action="/upload/" enctype="multipart/form-data" id="form_upload">
+            {% csrf_token %}
+            <div class="btn_form">
                 <div>
-                <input type="radio" name="radio" id="radio1" class="radio" checked/>
-                <label for="radio1">정적 분석</label>
+                <input type="radio" name="analysis_radio" id="analysis_select_static" class="radio" checked value="static"/>
+                <label for="analysis_select_static">정적 분석</label>
                 </div>
 
                 <div>
-                <input type="radio" name="radio" id="radio2" class="radio"/>
-                <label for="radio2">동적 분석</label>
+                <input type="radio" name="analysis_radio" id="analysis_select_dynamic" class="radio" value="dynamic"/>
+                <label for="analysis_select_dynamic">동적 분석</label>
                 </div>
 
                 <div>
-                <input type="radio" name="radio" id="radio3" class="radio"/>
-                <label for="radio3">혼합 분석</label>
+                <input type="radio" name="analysis_radio" id="analysis_select_hybrid" class="radio" value="hybrid"/>
+                <label for="analysis_select_hybrid">혼합 분석</label>
                 </div>
             </div>
             <div class="container_form" role="main">
-
-                <div class="box">
-
-                    <div class="box__input">
+                <div class="box_upload">
+                    <div class="box_upload_input">
                         <div>
                             <img src="{% static 'download.png' %}" class="box__icon" id="upload">
                         </div>
                         <input type="file" name="upload_file" id="file" class="box__file" style="display: none;" data-multiple-caption="{count} files selected" multiple>
-                        <label id="label-style" for="file"><strong><i>Choose a file</i></strong><span class="box__dragndrop"> or drag it here</span>.</label>
-
+                        <label id="box_upload_filename" for="file"><strong><i>Choose a file</i></strong><span class="box__dragndrop"> or drag it here</span>.</label>
                     </div>
 
-                    <div class="box__uploading">
-                        <div><img src="{% static 'download.gif' %}" class="box__icon" id="uploading">
-                        </div>
+                    <div class="box_upload_uploading">
+                        <div><img src="{% static 'download.gif' %}" class="box__icon" id="uploading"></div>
                         Uploading&hellip;
                     </div>
-
                 </div>
             </div>
-        </div>
-    </form>
+        </form>
+    </div>
 </div>
 
 
