--- a/web/upload_app/templates/layout.html
+++ b/web/upload_app/templates/layout.html
@@ -3,7 +3,7 @@
 <html style="height: 100%;">
 
 <head>
-    <title>{% block page_title %}Capstone Desing Web{% endblock %}</title>
+    <title>{% block page_title %}MASK{% endblock %}</title>
     <meta charset="utf-8">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" >
