static analysis interlock ann_static_analysis

--- a/web/upload_app/templates/detail.html
+++ b/web/upload_app/templates/detail.html
@@ -44,7 +44,7 @@
             <div class="panel-body">
                 <div class="progress skill-bar">
                     <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
-                        <span class="skill">safe<i class="val">55%</i></span>
+                        <span class="skill">safe<i class="val">{{ report_form.fields.score.initial }}%</i></span>
                     </div>
                 </div>
 
