--- a/web/upload_app/templates/detail.html
+++ b/web/upload_app/templates/detail.html
@@ -43,7 +43,7 @@
             </div>
             <div class="panel-body">
                 <div class="progress skill-bar">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress-bar" role="progressbar" aria-valuenow={{ report_form.fields.score.initial }} aria-valuemin="0" aria-valuemax="100">
                         <span class="skill">safe<i class="val">{{ report_form.fields.score.initial }}%</i></span>
                     </div>
                 </div>
