--- a/web/upload_app/templates/detail.html
+++ b/web/upload_app/templates/detail.html
@@ -20,14 +20,14 @@
                     <p><strong>파일 MD5 </strong></p>
                     <p><strong>바이러스 유무</strong></p>
                     <p><strong>바이러스 분석 결과</strong></p>
-                    <p><strong>File Uploaded Date</strong></p>
+                    <p><strong>리포트 수집 날짜</strong></p>
                 </div>
 
                 <div class="text_data">
                     <p>{{ report_form.fields.md5.initial }}</p>
                     <p>{{ report_form.fields.detected.initial }}</p>
                     <p>{{ report_form.fields.label.initial }}</p>
-                    <p>{{ report_form.fields.uploaded_date.initial }}</p>
+                    <p>{{ report_form.fields.collected_date.initial }}</p>
                 </div>
             </div>
         </div>
